✨ reparando fotos y corrigiendo carpeta de despliegue

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,3 +14,4 @@ jobs:
         server: pacisauctor.educationhost.cloud
         username: egzosycn
         password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: public_html/
